--- a/heritageMore.html
+++ b/heritageMore.html
@@ -26,8 +26,9 @@
 
     <section id="Heri">
         <h1 class="h-primary">Heritage</h1>
-        <p>Pilgrimage tourism is essentially the process of visiting pilgrimage sites. These are primarily religious destinations.They are a whole journey, one that people of faith take in order to strengthen
-             their relationship with their religion. However, pilgrimage tourism can include visits to specific temples, churches, mosques or other religious landmarks in the city. </p>
+        <p>Heritage tours can be a thrilling and enjoyable experience for travellers, offering a blend of education and entertainment.Knowledgeable guides share captivating stories and anecdotes,
+             bringing history to life and keeping everyone entertained. The scenic exploration of stunning locations, from ancient ruins to picturesque landscapes, offers ample opportunities for 
+             photography and enjoyment.Additionally, the thrill of discovery is enhanced by exploring ancient temples and vibrant local markets. </p>
     </section>
 
     <section id="services-container">
