--- a/pilgrimageMore.html
+++ b/pilgrimageMore.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pilgrimage</title>
     <link rel="stylesheet" href="css/Pstyle.css">
+    <link rel="icon" type="image/x-icon" href="img/logo2.png">
     <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
 </head>
